# smartcompare-backend

./: .gitignore  pyproject.toml  requirements.txt  test_client.py
SmartCompareApp/: App.tsx  app.json  package-lock.json  package.json
SmartCompareApp/src/screens/: CameraScreen.tsx  ForgotPasswordScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  RegisterScreen.tsx  ResultsScreen.tsx
SmartCompareApp/src/services/: api.ts  authService.ts
SmartCompareApp/src/types/: index.ts  types.ts
app/: main.py
app/api/: auth_routes.py  routes.py  text_routes.py  url_routes.py
app/models/: product_schema.py  schemas.py
app/services/: cache_service.py  comparison_service.py  extraction_service.py  serper_service.py  structured_comparison_service.py  url_extraction_service.py
backend/: pyproject.toml  requirements.txt  test_services.py
backend/app/: config.py  main.py
backend/app/api/: routes.py  text_routes.py  url_routes.py
backend/app/models/: product_schema.py  schemas.py
backend/app/services/: auth_service.py  cache_service.py  comparison_service_v3.py  database_service.py  extraction_service.py  lite_comparison_service.py  openai_service.py  rating_extractor.py  rating_service.py  serper_service.py  structured_comparison_service.py  url_extraction_service.py
docs/: ARCHITECTURE_V3.md  CLAUDE_CODE_CONTEXT.md
